fix: #2298 fix 768px screen content not showing (#2304)

--- a/packages/elements/src/styles/components/layout.scss
+++ b/packages/elements/src/styles/components/layout.scss
@@ -8,7 +8,7 @@
   overflow-y: visible;
   overflow-x: hidden;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 769px) {
     flex-direction: row;
   }
 }
